--- a/CsvReaderAdvanced/CsvReaderAdvanced.csproj
+++ b/CsvReaderAdvanced/CsvReaderAdvanced.csproj
@@ -43,6 +43,9 @@
       <PackagePath>\</PackagePath>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="sample_schema.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
