Add Database form.

--- a/CsvWinAnalyzer/CsvWinAnalyzer.csproj
+++ b/CsvWinAnalyzer/CsvWinAnalyzer.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\FilterGlecBuild\SqlServerExplorerLib\SqlServerExplorerLib.csproj" />
     <ProjectReference Include="..\CsvReaderAdvanced\CsvReaderAdvanced.csproj" />
   </ItemGroup>
 
