--- a/CsvWinAnalyzer/App.config
+++ b/CsvWinAnalyzer/App.config
@@ -10,6 +10,9 @@
             <setting name="Filepath" serializeAs="String">
                 <value />
             </setting>
+            <setting name="ConnectionString" serializeAs="String">
+                <value />
+            </setting>
         </CsvWinAnalyzer.FormSettings>
     </userSettings>
 </configuration>
