--- a/CsvWinAnalyzer/FormSettings.settings
+++ b/CsvWinAnalyzer/FormSettings.settings
@@ -5,5 +5,8 @@
     <Setting Name="Filepath" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="ConnectionString" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
