Add batch progress bar and test case for single read and parallell for building header analysis.

--- a/CsvWinAnalyzer/App.config
+++ b/CsvWinAnalyzer/App.config
@@ -13,6 +13,9 @@
             <setting name="ConnectionString" serializeAs="String">
                 <value />
             </setting>
+            <setting name="TargetTable" serializeAs="String">
+                <value>NEW_TABLE</value>
+            </setting>
         </CsvWinAnalyzer.FormSettings>
     </userSettings>
 </configuration>
