--- a/CsvWinAnalyzer/FormSettings.settings
+++ b/CsvWinAnalyzer/FormSettings.settings
@@ -8,5 +8,8 @@
     <Setting Name="ConnectionString" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="TargetTable" Type="System.String" Scope="User">
+      <Value Profile="(Default)">NEW_TABLE</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
