Major update remove redundant Interfaces. Remove path, encoding, from every method except the constructor of the CsvFile and the methods of the CsvFileFactory.

--- a/CsvWinAnalyzer/CsvWinAnalyzer.csproj
+++ b/CsvWinAnalyzer/CsvWinAnalyzer.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\FilterGlecBuild\SqlServerExplorerLib\SqlServerExplorerLib.csproj" />
+    <ProjectReference Include="..\..\SqlServerExplorerApp\SqlServerExplorerLib\SqlServerExplorerLib.csproj" />
     <ProjectReference Include="..\CsvReaderAdvanced\CsvReaderAdvanced.csproj" />
   </ItemGroup>
 
